Change env setting name

--- a/student_explorer/settings/sample.env
+++ b/student_explorer/settings/sample.env
@@ -19,6 +19,8 @@ DJANGO_LTDATA_DB_PASSWORD=
 DJANGO_LTDATA_DB_HOST=
 DJANGO_LTDATA_DB_PORT=
 
+DJANGO_USE_LTDATA_DATABASE=0
+
 DJANGO_REMOTE_USER_HEADER=
 
 DJANGO_LDAP_HOST=ldap://ldap.umich.edu/
