Add umichuser submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "hashredirect"]
 	path = hashredirect
 	url = git@bitbucket.org:umichdig/hashredirect.git
+[submodule "umichuser"]
+	path = umichuser
+	url = git@bitbucket.org:umichdig/umichuser.git
