Rename healthcheck submodule to statuscheck

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,6 +4,6 @@
 [submodule "umichuser"]
 	path = umichuser
 	url = git@bitbucket.org:umichdig/umichuser.git
-[submodule "healthcheck"]
-	path = healthcheck
-	url = git@bitbucket.org:umichdig/healthcheck.git
+[submodule "statuscheck"]
+	path = statuscheck
+	url = git@bitbucket.org:umichdig/statuscheck.git
