--- a/sespa/bower.json
+++ b/sespa/bower.json
@@ -12,7 +12,8 @@
     "angular-sanitize": "^1.4.7",
     "angular-touch": "^1.4.7",
     "jquery": "^2.1.4",
-    "bower-package": "*"
+    "bower-package": "*",
+    "angularjs-nvd3-directives": "~0.0.7"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.7"
