--- a/sespa/bower.json
+++ b/sespa/bower.json
@@ -13,7 +13,8 @@
     "angular-touch": "^1.4.7",
     "jquery": "^2.1.4",
     "bower-package": "*",
-    "angularjs-nvd3-directives": "~0.0.7"
+    "angularjs-nvd3-directives": "~0.0.7",
+    "components-font-awesome": "~4.5.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.7"
