--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 Django==1.9
 mysql-python
-djangorestframework
-django-filter
-django-crispy-forms
+# djangorestframework
+# django-filter
+# django-crispy-forms
 python-ldap
 requests
-#git+https://bitbucket.org/umichdig/django-unizindata.git
+watchman
+# git+https://bitbucket.org/umichdig/django-unizindata.git
