Update all dependancies with broad match version (i.e. <*.*.99)

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-Django==1.9
-mysql-python==1.2.5
-python-ldap==2.4.27
-requests==2.20
-django-watchman==0.11.0
-django-registration-redux==1.4
-django-extensions==1.7.4
-whitenoise==3.2.2
-djangosaml2==0.14.5
-django-debug-toolbar==1.6
-xlrd==1.0.0
-xlwt==1.2.0
+Django==1.9,<1.9.99
+mysql-python==1.2.5,<1.2.99
+python-ldap==2.4.27,<2.4.99
+requests>=2.20,<2.20.99
+django-watchman==0.11.0,<0.11.99
+django-registration-redux==1.4,<1.4.99
+django-extensions==1.7.41,<1.7.99
+whitenoise==3.2.2,<3.2.99
+djangosaml2==0.14.5,<0.14.99
+django-debug-toolbar==1.6,<1.6.99
+xlrd==1.0.0,<1.0.99
+xlwt==1.2.0,<1.2.99
