--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,6 @@ xlrd==1.0.0
 xlwt==1.2.0
 
 libsass==0.16.0
+django-cron>=0.5.1,<0.5.99
+future-fstrings>=0.4.4,<0.4.99
+python-decouple>=3.1,<3.99
