issue_41 update canvas api calls to add user to course site

--- a/.env.sample
+++ b/.env.sample
@@ -15,6 +15,13 @@ CRONTAB_SCHEDULE =
 
 # credentials to use Python APIUtils library
 # https://github.com/tl-its-umich-edu/api-utils-python
-APIUTIL_URL=""
-APIUTIL_KEY=""
-APIUTIL_SECRET=""
+APIUTIL_URL=
+APIUTIL_KEY=
+APIUTIL_SECRET=
+
+# department affiliation string from MCommunity settings
+DEPT_AFFILIATION
+
+# URL pattern for course
+# https://xxxx/courses/
+CANVAS_COURSE_URL_PREFIX=
