Further work on cron job for checking advisor Canvas membership  (#48)
* issue_15

* issue_15 added datetime field

* issue-41 apiutil calls to add mentor to student course site

* issue_41 update canvas api calls to add user to course site

* issue_41 code changes based on review

--- a/.env.sample
+++ b/.env.sample
@@ -12,3 +12,16 @@ RUN_AT_TIMES =
 # This should run as frequently or more frequently than RUN_AT_TIMES
 # Use https://crontab.guru to validate your schedule
 CRONTAB_SCHEDULE =
+
+# credentials to use Python APIUtils library
+# https://github.com/tl-its-umich-edu/api-utils-python
+APIUTIL_URL=
+APIUTIL_KEY=
+APIUTIL_SECRET=
+
+# department affiliation string from MCommunity settings
+DEPT_AFFILIATION
+
+# URL pattern for course
+# https://xxxx/courses/
+CANVAS_COURSE_URL_PREFIX=
