--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3'
 services:
   mysql:
     image: mysql:5.7.22
-    restart: always
+    restart: on-failure
     environment:
       - MYSQL_HOST=${DJANGO_DB_HOST}
       - MYSQL_DATABASE=${DJANGO_DB_NAME}
