--- a/.env.sample
+++ b/.env.sample
@@ -41,3 +41,8 @@ DJANGO_SEUMICH_DB_USER=student_explorer
 DJANGO_SEUMICH_DB_PASSWORD=student_explorer
 DJANGO_SEUMICH_DB_HOST=student_explorer_mysql
 DJANGO_SEUMICH_DB_PORT=3306
+
+MYSQL_ROOT_PASSWORD=root
+DJANGO_DEBUG=true
+
+DJANGO_LOGGING_LEVEL=DEBUG
