--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,7 @@ services:
         dockerfile: Dockerfile
         args:
             - LOCALHOST_DEV=1
+            - ORACLE_CLIENT_VERSION=18.3
     command: bash -c "./start-localhost.sh"
     volumes:
       - .:/code
