--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,6 @@ libsass==0.16.0
 django-cron>=0.5.1,<0.5.99
 future-fstrings>=0.4.4,<0.4.99
 python-decouple>=3.1,<3.99
+
+ptvsd>=4.2.0,<4.2.99
+django-ptvsd-debug==1.0.3
