--- a/requirements.txt
+++ b/requirements.txt
@@ -16,4 +16,6 @@ django-cron>=0.5.1,<0.5.99
 future-fstrings>=0.4.4,<0.4.99
 python-decouple>=3.1,<3.99
 
+ptvsd>=4.2.0,<4.2.99
+django-ptvsd-debug==1.0.3
 python-dateutil==2.8.0
