Fixes #122 adding caching support

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@
 
 .coverage
 
+redis
+
 # Github gitignore
 # https://raw.githubusercontent.com/github/gitignore/master/Python.gitignore
 # Byte-compiled / optimized / DLL files
