--- a/.env.sample
+++ b/.env.sample
@@ -46,3 +46,19 @@ MYSQL_ROOT_PASSWORD=root
 DJANGO_DEBUG=true
 
 DJANGO_LOGGING_LEVEL=DEBUG
+
+#Default value for cache_page ttl
+CACHE_TTL=600
+
+# Default is redis
+# Could possible switch it to django.core.cache.backends.db.DatabaseCache
+CACHE_BACKEND=django_redis.cache.RedisCache
+
+# Location of cache, for redis this is server and port, for Database it's table name
+CACHE_LOCATION=redis://student_explorer_redis:6379/1
+
+# JSON formatted options to pass (optional)
+CACHE_OPTIONS={"CLIENT_CLASS": "django_redis.client.DefaultClient"}
+
+# Default Key Prefix
+CACHE_KEY_PREFIX=student_explorer
