Adding dummy cache in sample

--- a/.env.sample
+++ b/.env.sample
@@ -52,6 +52,7 @@ CACHE_TTL=600
 
 # Default is redis
 # Could possible switch it to django.core.cache.backends.db.DatabaseCache
+# If you don't want any cache set this to django.core.cache.backends.dummy.DummyCache
 CACHE_BACKEND=django_redis.cache.RedisCache
 
 # Location of cache, for redis this is server and port, for Database it's table name
