Some updates to env sample

--- a/.env.sample
+++ b/.env.sample
@@ -47,10 +47,12 @@ DJANGO_DEBUG=true
 
 DJANGO_LOGGING_LEVEL=DEBUG
 
-# Uncomment this values and define the location and options of the cache if you want to enable Redis (or other) caching
-# Only the package for redis is included in the default requirements
+# Uncomment these values and define the location and options of the cache 
+# if you want to enable Redis (or other) caching
+#
+# Redis is the only package included in the default requirements.txt
 
-#Default value for cache_page ttl
+# Default value for cache_page ttl
 # CACHE_TTL=600
 
 # Only supported package is Redis
