--- a/.env.sample
+++ b/.env.sample
@@ -46,3 +46,28 @@ MYSQL_ROOT_PASSWORD=root
 DJANGO_DEBUG=true
 
 DJANGO_LOGGING_LEVEL=DEBUG
+
+# Uncomment these values and define the location and options of the cache 
+# if you want to enable Redis (or other) caching
+#
+# Redis is the only package included in the default requirements.txt
+
+# Default value for cache_page ttl
+# CACHE_TTL=600
+
+# Only supported package is Redis
+# If you don't want any cache set this to 
+# django.core.cache.backends.dummy.DummyCache 
+
+# This is the default if nothing is set
+
+# CACHE_BACKEND=django_redis.cache.RedisCache
+
+# Location of cache, for redis this is server and port, for Database it's table name
+# CACHE_LOCATION=redis://student_explorer_redis:6379/1
+
+# JSON formatted options to pass (optional)
+# CACHE_OPTIONS={"CLIENT_CLASS": "django_redis.client.DefaultClient"}
+
+# Default Key Prefix
+# CACHE_KEY_PREFIX=student_explorer
