--- a/requirements.txt
+++ b/requirements.txt
@@ -19,3 +19,6 @@ python-decouple>=3.1,<3.99
 ptvsd>=4.2.0,<4.2.99
 django-ptvsd-debug==1.0.3
 python-dateutil==2.8.0
+
+django-redis>=4.10.0,<4.99
+django-cachalot>=2.1.0,<2.1.99
