Fixes #153 Change to page fragment caching. Also switches to database caching by default Adds settings export to get the TTL

--- a/.env.sample
+++ b/.env.sample
@@ -45,7 +45,8 @@ DJANGO_SEUMICH_DB_PORT=3306
 MYSQL_ROOT_PASSWORD=root
 DJANGO_DEBUG=true
 
-DJANGO_LOGGING_LEVEL=DEBUG
+# Debug level can conflict with Django Debug Toolbar
+DJANGO_LOGGING_LEVEL=INFO
 
 # Uncomment these values and define the location and options of the cache 
 # if you want to enable Redis (or other) caching
@@ -55,15 +56,17 @@ DJANGO_LOGGING_LEVEL=DEBUG
 # Default value for cache_page ttl
 # CACHE_TTL=600
 
-# Only supported package is Redis
+# Redis, Database LocMem and others are supported
 # If you don't want any cache set this to 
 # django.core.cache.backends.dummy.DummyCache 
 
-# This is the default if nothing is set
+# DummyCache is the default if nothing is set
 
+# Possible Options
 # CACHE_BACKEND=django_redis.cache.RedisCache
+# CACHE_BACKEND=django.core.cache.backends.db.DatabaseCache
 
-# Location of cache, for redis this is server and port, for Database it's table name
+# Location of cache, for redis this is server and port, for database it's table name
 # CACHE_LOCATION=redis://student_explorer_redis:6379/1
 
 # JSON formatted options to pass (optional)
