Updating sample env with more clarity on the options

--- a/.env.sample
+++ b/.env.sample
@@ -50,27 +50,35 @@ DJANGO_LOGGING_LEVEL=INFO
 
 # Uncomment these values and define the location and options of the cache 
 # if you want to enable Redis (or other) caching
+# Django supports many different caches please see the documentation
+# https://docs.djangoproject.com/en/1.11/topics/cache/
 #
-# Redis is the only package included in the default requirements.txt
+# Redis is the only extra package included in requirements.txt
 
-# Default value for cache_page ttl
+# Default value in seconds for how long to cache (Default 600)
 # CACHE_TTL=600
 
+# Default Key Prefix (as part of the key/value pair)
+# CACHE_KEY_PREFIX=student_explorer
+ 
 # Redis, Database LocMem and others are supported
 # If you don't want any cache set this to 
 # django.core.cache.backends.dummy.DummyCache 
 
-# DummyCache is the default if nothing is set
+# Possible Options (Others in django.core may be supported)
+# Only uncomment one CACHE_BACKEND and one CACHE_LOCATION
+# ** DummyCache - doesn't do anything 
+# CACHE_BACKEND=django.core.cache.backends.dummy.DummyCache 
+# CACHE_LOCATION=
 
-# Possible Options
+# ** Redis, the CACHE_LOCATION is the server and port
 # CACHE_BACKEND=django_redis.cache.RedisCache
-# CACHE_BACKEND=django.core.cache.backends.db.DatabaseCache
-
-# Location of cache, for redis this is server and port, for database it's table name
 # CACHE_LOCATION=redis://student_explorer_redis:6379/1
 
+# ** Database CACHE_LOCATION is a table name in the 'default' database (MySQL)
+# CACHE_BACKEND=django.core.cache.backends.db.DatabaseCache
+# CACHE_LOCATION=se_view_cache
+
+# These are additional options (only required for Redis)
 # JSON formatted options to pass (optional)
 # CACHE_OPTIONS={"CLIENT_CLASS": "django_redis.client.DefaultClient"}
-
-# Default Key Prefix
-# CACHE_KEY_PREFIX=student_explorer
