Fixes #153 Change to page fragment caching. (#160)
* Fixes #153 Change to page fragment caching.
Also switches to database caching by default
Adds settings export to get the TTL

* Fix typo in start script

* Fixing comma in start script

* Updating sample env with more clarity on the options

* Changing the cache vary to the path (Discussion with Sam)

* Removing whitespace in env sample

--- a/.env.sample
+++ b/.env.sample
@@ -6,13 +6,13 @@
 IS_CRON_POD=
  # Time to run cron CSV separated times in HH:MM format. 
 # An example is 02:00,04:00 to run at 2AM and 4AM
-RUN_AT_TIMES =
+RUN_AT_TIMES=
 
 # Time to run system cron
 # An example to match the above would be 0 2,4 * * *
 # This should run as frequently or more frequently than RUN_AT_TIMES
 # Use https://crontab.guru to validate your schedule
-CRONTAB_SCHEDULE =
+CRONTAB_SCHEDULE=
 
 # credentials to use Python APIUtils library. This is needed to run the cron job
 # https://github.com/tl-its-umich-edu/api-utils-python
@@ -45,29 +45,40 @@ DJANGO_SEUMICH_DB_PORT=3306
 MYSQL_ROOT_PASSWORD=root
 DJANGO_DEBUG=true
 
-DJANGO_LOGGING_LEVEL=DEBUG
+# Debug level can conflict with Django Debug Toolbar
+DJANGO_LOGGING_LEVEL=INFO
 
 # Uncomment these values and define the location and options of the cache 
 # if you want to enable Redis (or other) caching
+# Django supports many different caches please see the documentation
+# https://docs.djangoproject.com/en/1.11/topics/cache/
 #
-# Redis is the only package included in the default requirements.txt
+# Redis is the only extra package included in requirements.txt
 
-# Default value for cache_page ttl
+# Default value in seconds for how long to cache (Default 600)
 # CACHE_TTL=600
 
-# Only supported package is Redis
+# Default Key Prefix (as part of the key/value pair)
+# CACHE_KEY_PREFIX=student_explorer
+ 
+# Redis, Database LocMem and others are supported
 # If you don't want any cache set this to 
 # django.core.cache.backends.dummy.DummyCache 
 
-# This is the default if nothing is set
+# Possible Options (Others in django.core may be supported)
+# Only uncomment one CACHE_BACKEND and one CACHE_LOCATION
+# ** DummyCache - doesn't do anything 
+# CACHE_BACKEND=django.core.cache.backends.dummy.DummyCache 
+# CACHE_LOCATION=
 
+# ** Redis, the CACHE_LOCATION is the server and port
 # CACHE_BACKEND=django_redis.cache.RedisCache
-
-# Location of cache, for redis this is server and port, for Database it's table name
 # CACHE_LOCATION=redis://student_explorer_redis:6379/1
 
+# ** Database CACHE_LOCATION is a table name in the 'default' database (MySQL)
+# CACHE_BACKEND=django.core.cache.backends.db.DatabaseCache
+# CACHE_LOCATION=se_view_cache
+
+# These are additional options (only required for Redis)
 # JSON formatted options to pass (optional)
 # CACHE_OPTIONS={"CLIENT_CLASS": "django_redis.client.DefaultClient"}
-
-# Default Key Prefix
-# CACHE_KEY_PREFIX=student_explorer
