Fixes #166 Add django_mysql cache to support compression

--- a/.env.sample
+++ b/.env.sample
@@ -50,10 +50,11 @@ DJANGO_LOGGING_LEVEL=INFO
 
 # Uncomment these values and define the location and options of the cache 
 # if you want to enable Redis (or other) caching
+
 # Django supports many different caches please see the documentation
 # https://docs.djangoproject.com/en/1.11/topics/cache/
 #
-# Redis is the only extra package included in requirements.txt
+# Redis and django_mysql are included in requirements.txt
 
 # Default value in seconds for how long to cache (Default 600)
 # CACHE_TTL=600
@@ -76,9 +77,21 @@ DJANGO_LOGGING_LEVEL=INFO
 # CACHE_LOCATION=redis://student_explorer_redis:6379/1
 
 # ** Database CACHE_LOCATION is a table name in the 'default' database (MySQL)
+# This table is created automatically and could be anything.
 # CACHE_BACKEND=django.core.cache.backends.db.DatabaseCache
 # CACHE_LOCATION=se_view_cache
 
+# ** MySQL CACHE_LOCATION is created by a migration and has to be this table
+# This library supports CACHE_OPTIONS, see this for more info:
+# https://django-mysql.readthedocs.io/en/latest/cache.html
+# CACHE_BACKEND=django_mysql.cache.MySQLCache
+# CACHE_LOCATION=django_mysql_cache
+
 # These are additional options (only required for Redis)
 # JSON formatted options to pass (optional)
+# For Redis you might have
 # CACHE_OPTIONS={"CLIENT_CLASS": "django_redis.client.DefaultClient"}
+
+# For django_mysql you might want these options. 
+# To turn compression off set COMPRESS_MIN_LENGTH to 0
+# CACHE_OPTIONS={"COMPRESS_MIN_LENGTH": 5000, "COMPRESS_LEVEL": 6}
