--- a/requirements.txt
+++ b/requirements.txt
@@ -22,3 +22,5 @@ python-dateutil==2.8.0
 
 django-redis>=4.10.0,<4.99
 django-settings-export>=1.2.1,<1.2.99
+django-mysql>=3.2.0,<3.2.99
+sqlparse>=0.3.0,<0.3.99
