--- a/.env.sample
+++ b/.env.sample
@@ -1,31 +1,4 @@
-### CRON POD SETTINGS
-#
-# All of these settings go together and need to be enabled to configure the cron pod
- # set this to be true on OpenShift pod for running cron job. 
-# RUN_AT_TIMES and CRONTAB_SCHEDULE have no affect otherwise.
-IS_CRON_POD=
- # Time to run cron CSV separated times in HH:MM format. 
-# An example is 02:00,04:00 to run at 2AM and 4AM
-RUN_AT_TIMES=
-
-# Time to run system cron
-# An example to match the above would be 0 2,4 * * *
-# This should run as frequently or more frequently than RUN_AT_TIMES
-# Use https://crontab.guru to validate your schedule
-CRONTAB_SCHEDULE=
-
-# credentials to use Python APIUtils library. This is needed to run the cron job
-# https://github.com/tl-its-umich-edu/api-utils-python
-APIUTIL_URL=
-APIUTIL_KEY=
-APIUTIL_SECRET=
-
-# department affiliation string from MCommunity settings
-DEPT_AFFILIATION
-
-# URL pattern for course
-# https://xxxx/courses/
-CANVAS_COURSE_URL_PREFIX=
+### General (Databases, Django, Authentication, Caching)
 
 # Default database values
 DJANGO_DB_ENGINE=django.db.backends.mysql
@@ -47,6 +20,9 @@ DJANGO_DEBUG=true
 
 # Debug level can conflict with Django Debug Toolbar
 DJANGO_LOGGING_LEVEL=INFO
+
+# department affiliation string from MCommunity settings
+DEPT_AFFILIATION
 
 # Uncomment these values and define the location and options of the cache 
 # if you want to enable Redis (or other) caching
@@ -95,3 +71,32 @@ DJANGO_LOGGING_LEVEL=INFO
 # For django_mysql you might want these options. 
 # To turn compression off set COMPRESS_MIN_LENGTH to 0
 # CACHE_OPTIONS={"COMPRESS_MIN_LENGTH": 5000, "COMPRESS_LEVEL": 6}
+
+
+### Cron Pod Settings
+# (Student Explorer does not currently use a cron job. These comments have been retained in case we move in the future
+# back to such an approach.)
+
+# All of these settings go together and need to be enabled to configure the cron pod
+# set this to be true on OpenShift pod for running cron job.
+# RUN_AT_TIMES and CRONTAB_SCHEDULE have no affect otherwise.
+# IS_CRON_POD=
+# Time to run cron CSV separated times in HH:MM format.
+# An example is 02:00,04:00 to run at 2AM and 4AM
+# RUN_AT_TIMES=
+
+# Time to run system cron
+# An example to match the above would be 0 2,4 * * *
+# This should run as frequently or more frequently than RUN_AT_TIMES
+# Use https://crontab.guru to validate your schedule
+# CRONTAB_SCHEDULE=
+
+# credentials to use Python APIUtils library. This is needed to run the cron job
+# https://github.com/tl-its-umich-edu/api-utils-python
+# APIUTIL_URL=
+# APIUTIL_KEY=
+# APIUTIL_SECRET=
+
+# URL pattern for course
+# https://xxxx/courses/
+# CANVAS_COURSE_URL_PREFIX=
