Move and comment out cron-related variable

--- a/.env.sample
+++ b/.env.sample
@@ -21,9 +21,6 @@ DJANGO_DEBUG=true
 # Debug level can conflict with Django Debug Toolbar
 DJANGO_LOGGING_LEVEL=INFO
 
-# department affiliation string from MCommunity settings
-DEPT_AFFILIATION
-
 # Uncomment these values and define the location and options of the cache 
 # if you want to enable Redis (or other) caching
 
@@ -100,3 +97,6 @@ DEPT_AFFILIATION
 # URL pattern for course
 # https://xxxx/courses/
 # CANVAS_COURSE_URL_PREFIX=
+
+# department affiliation string from MCommunity settings
+# DEPT_AFFILIATION
