Moved EMAIL_SUBJECT_PREFIX to env

--- a/.env.sample
+++ b/.env.sample
@@ -15,6 +15,8 @@ DJANGO_SEUMICH_DB_PASSWORD=student_explorer
 DJANGO_SEUMICH_DB_HOST=student_explorer_mysql
 DJANGO_SEUMICH_DB_PORT=3306
 
+# Prefix to idenity Student Explorer emails
+EMAIL_SUBJECT_PREFIX=Student_Explorer
 MYSQL_ROOT_PASSWORD=root
 DJANGO_DEBUG=true
 
