--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,22 @@
-Django>=1.11,<1.11.99
-mysqlclient>=1.4.4,<1.4.99
-python-ldap==3.2.0
-requests==2.20,<2.20.99
-django-watchman==0.15.0,<0.15.99
-django-registration-redux==1.4
-django-extensions==1.7.4
-whitenoise==3.3.1,<3.3.99
+# We're waiting on Django 3 until it's further into the lifecycle.
+Django>=2.2.9,<2.2.99
 djangosaml2==0.17.2
-django-debug-toolbar>=2.0,<2.0.99
-xlrd==1.0.0
-xlwt==1.2.0
-
-libsass==0.16.0
 django-cron>=0.5.1,<0.5.99
-future-fstrings>=0.4.4,<0.4.99
-python-decouple>=3.1,<3.99
-
-ptvsd>=4.2.0,<4.2.99
+django-debug-toolbar>=2.1,<2.1.99
+django-extensions>=2.2.6,<2.2.99
+django-mysql>=3.3.0,<3.3.99
 django-ptvsd-debug==1.0.3
-python-dateutil==2.8.0
-
-django-redis>=4.10.0,<4.99
+django-redis>=4.11.0,<4.11.99
+django-registration-redux==2.7
 django-settings-export>=1.2.1,<1.2.99
-django-mysql>=3.2.0,<3.2.99
-sqlparse>=0.3.0,<0.3.99
+django-watchman>=1.0.0,<1.0.99
+libsass>=0.19.4,<0.19.99
+mysqlclient>=1.4.6,<1.4.99
+ptvsd>=4.3.2,<4.3.99
+python-dateutil>=2.8.1,<2.8.99
+python-decouple==3.3
+python-ldap==3.2.0
+requests>=2.22.0,<2.22.99
+whitenoise>=5.0.1,<5.0.9
+xlrd==1.2.0
+xlwt==1.3.0
