--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
   "name": "student_explorer",
-  "version": "2.7.1",
+  "version": "2.7.3",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/tl-its-umich-edu/student_explorer.git"
+  },
+  "license": "Apache-2.0",
   "dependencies": {
     "bootstrap": "3.4.1",
     "components-font-awesome": "5.9.0",
     "d3": "3.5.17",
-    "jquery": "^3.4.1",
+    "jquery": "3.5.0",
     "nvd3": "1.1.15-beta2",
     "tablesorter": "2.31.2"
   }
