--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,34 @@
 # We're waiting on Django 3 until it's further into the lifecycle.
-Django>=2.2.9,<2.2.99
-djangosaml2==0.17.2
+Django>=3.2.9,<3.2.99
+djangosaml2==1.3.6
+
+# Hasn't been updated since 2018
 django-cron>=0.5.1,<0.5.99
-django-debug-toolbar>=2.1,<2.1.99
-django-extensions>=2.2.6,<2.2.99
-django-mysql>=3.3.0,<3.3.99
+django-debug-toolbar>=3.2,<3.2.99
+django-extensions>=3.1.5,<3.1.99
+django-mysql>=4.5.0,<4.5.99
+
+# Hasn't been updated since 2016
 django-npm==1.0.0
+
+# This needs to be switched to debugpy
 django-ptvsd-debug==1.0.3
-django-redis>=4.11.0,<4.11.99
-django-registration-redux==2.7
+django-registration-redux==2.9
+
+#This hasn't been updated since 2016
 django-settings-export>=1.2.1,<1.2.99
-django-watchman>=1.0.0,<1.0.99
-libsass>=0.19.4,<0.19.99
-mysqlclient>=1.4.6,<1.4.99
+django-watchman>=1.2.0,<1.2.99
+libsass>=0.21.0,<0.21.99
+mysqlclient>=2.1.0,<2.1.99
+
+#This needs to be switched to debugpy
 ptvsd>=4.3.2,<4.3.99
-python-dateutil>=2.8.1,<2.8.99
-python-decouple==3.3
-python-ldap==3.4.0
-requests>=2.22.0,<2.22.99
-whitenoise>=5.0.1,<5.0.9
-xlrd==1.2.0
+
+python-dateutil>=2.8.2,<2.8.99
+python-decouple==3.6
+requests>=2.27.0,<2.27.99
+whitenoise>=6.0.0,<6.0.99
+xlrd==2.0.1
+
+# This hasn't been updated since 2017
 xlwt==1.3.0
