Fixes #272 - Switch Google UA over to GA4 and add configurability

--- a/.env.sample
+++ b/.env.sample
@@ -73,3 +73,6 @@ DEPT_AFFILIATION
 # For django_mysql you might want these options. 
 # To turn compression off set COMPRESS_MIN_LENGTH to 0
 # CACHE_OPTIONS={"COMPRESS_MIN_LENGTH": 5000, "COMPRESS_LEVEL": 6}
+
+# Google Analytics 4 ID, if left blank will not use GA4 tracking
+# GA4_CONFIG_ID=G-XXXXXXXXX
